--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
         <source src="audio/audio1.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-
+<audio autoplay preload="auto">
+    <source src="path/to/audio.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
     <!-- Menambahkan referensi ke file JavaScript -->
     <script src="autoplay.js"></script>
 </body>
